--- a/resources/styles/login.css
+++ b/resources/styles/login.css
@@ -86,3 +86,23 @@
     text-decoration: underline;
   }
   
+  .password-field {
+    position: relative;
+  }
+  
+  .password-field input {
+    width: 100%;
+    padding-right: 30px;
+  }
+  
+  .toggle-password {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
