--- a/resources/styles/sidebar.css
+++ b/resources/styles/sidebar.css
@@ -135,7 +135,11 @@ body {
     transform: rotate(180deg);
 }
 
+.tambah {
+    transition: transform 0.2s ease;
+}
 .tambah:hover {
+    transform: scale(1.2);
     cursor: pointer;
 }
 
